# mosh

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  SOURCE_ASSESSMENT_PLAN.md  SPEC.md  pyproject.toml
assets/: generate-mosh-brand-assets.mjs  package-lock.json  package.json
scripts/: setup.sh
src/appsec_harness/: agents.py  cli.py  components.py  config.py  crawler.py  discovery_crew.py  docker_tools.py  engagement.py  memory.py  models.py  orchestrator.py  reporting.py  security_planning_crew.py  security_test_planning.py  security_testing_crew.py  tools.py
src/mosh/: __init__.py  cli.py  config.py  conversation.py  docker_tools.py  engagement.py  scope.py  (+4 more)
tests/: fakes.py  fixtures.py  test_agents.py  test_cli.py  test_config.py  test_conversation.py  test_crawler.py  test_crewai_config_subsets.py  test_crewai_events.py  test_dirb_tool.py  test_discovery_crew.py  test_discovery_tools_container.py  test_docker_tools.py  test_engagements.py  test_evidence_linker_crew.py  test_evidence_links.py  test_external_osint_tool.py  test_extractify_tool.py  test_final_reporting.py  test_harness_improvements.py  test_js_endpoint_extractor_script.py  test_js_static_endpoint_tool.py  test_katana_tool.py  test_known_public_endpoints.py  test_memory.py  test_openapi_parser.py  test_orchestrator.py  test_reporting.py  test_scope.py  test_security_test_planning.py  test_security_testing_crew.py  test_security_testing_partial.py  test_security_tools_container.py  test_setup_script.py  test_source_discovery.py  test_source_map_discovery_script.py  test_source_map_tool.py  test_testing_crew.py
tools/: Dockerfile  katana-form-config.yaml
(+131 files in other folders)
