[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mosh"
version = "0.1.0"
description = "Agent-coordinated application security discovery and testing workflow."
requires-python = ">=3.11"
dependencies = ["crewai>=1.0.0"]

[project.scripts]
mosh = "mmosh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mosh*"]

[tool.setuptools.package-data]
mosh = ["crews/**/*.yaml"]
